# NaI_MC

./: Ac228.mac  Bi214.mac  CMakeLists.txt  Co60.mac  Cs137.mac  G4History.macro  K40.mac  MergeFiles.cc  Na22.mac  NaI.cc  README.md  Ra226.mac  Th228.mac  Th232.mac  Th234.mac  Tl208.mac  U235.mac  U238.mac  cont_spec.mac  geantino.mac  init.mac  init_geantino.mac  init_run.mac  init_vis.mac  run.mac  run_isotopes.sh  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  HolderConstruction.hh  LeadConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  HolderConstruction.cc  LeadConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
